--- a/index.html
+++ b/index.html
@@ -3,18 +3,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Trans-Lab</title>
+  <title>Trans-Lab bip</title>
+  <!-- link de icono parte superior de pestaña -->
+  <link rel="icon" type="image/jpg" href="img/imagen.png" />
   <!-- link de fontawesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <!-- link de bootstraps -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-
-<!-- fin de container -->
+  <header>
+    <!-- comienzo de container -->
+    <div class ="container-fluid">
+      <div class="row">
+        <!-- inicio de columnas -->
+        <div class="col-sm-12">
+        <div class="logo">
+          <img id="imagen" src="img/imagen.png" alt="logo de TransLab">
+          <h4>TRANS-LAB</h4>
+          </div>       
+   </header>
+         <!-- aqui login -->
+         <section id="sectionLogin">
+         <form>
+             <div class="form-group">
+               <label for="exampleInputEmail1"></label>               
+               <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo electronico">
+                           
+             </div>
+             <div class="form-group">
+               <label for="exampleInputPassword1"></label>
+               <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña"  value="">
+             </div>
+             <a href="home.html">
+             <button type="submit"  class="btn btn-primary" onkeypress="return isNumberKey()" id="boton" >Iniciar sesión</button> 
+           </a>        
+           </form>
+           <!-- comentario de olvidar contraseña -->
+           <p id="fpass">Olvidaste tu contaseña</p>
+           <!-- fin de login -->
+        </div>
+        </div>
+        <!-- fin de columnas -->
+      </div>
+      <footer>
+        <h5>¿NO TIENES CUENTA? <span>REGISTRATE</span></h5>
+      </footer>
+    </div>
+   </div> 
+  </section>  
+<!-- fin de seccion login -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-<script src="js/main.js" ></script>   
+<script src="src/js/main.js" ></script>
+<script src="src/js/data.js"></script> 
 </body>
+</html>
