vinculacion con firebase

--- a/index.html
+++ b/index.html
@@ -152,13 +152,30 @@
     </section>
   </section>
   <!-- fin seccion perfil -->
-
+  
+  <!-- vinculo firebase -->
+<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAEQHZNdaH57Z1UXOomddbbxhxbfRubN1c",
+    authDomain: "trans-lab-a8a00.firebaseapp.com",
+    databaseURL: "https://trans-lab-a8a00.firebaseio.com",
+    projectId: "trans-lab-a8a00",
+    storageBucket: "",
+    messagingSenderId: "1087920020259"
+  };
+  firebase.initializeApp(config);
+</script>
+<!-- vinculo jquery -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
+    <!-- vinculo bootstrap -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
     crossorigin="anonymous"></script>
+    <!-- viculo hojas js -->
   <script src="src/js/main.js"></script>
   <script src="src/js/data.js"></script>
 </body>
