--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1"></label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Correo electronico">
+        <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp" placeholder="Correo electronico">
 
       </div>
       <div class="form-group">
         <label for="exampleInputPassword1"></label>
-        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Contraseña" value="">
+        <input type="password" class="form-control" id="inputPassword" placeholder="Contraseña" value="">
       </div>
       <button type="button" class="btnLogin" onkeypress="return isNumberKey()" id="botonLogin">Iniciar sesión</button>
+      <div class="alertConteiner" id="alertPassword"></div>
     </form>
     <!-- comentario de olvidar contraseña -->
     <p id="fpass">Olvidaste tu contaseña</p>
@@ -152,21 +153,22 @@
     </section>
   </section>
   <!-- fin seccion perfil -->
-  
+
   <!-- vinculo firebase -->
-<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyAEQHZNdaH57Z1UXOomddbbxhxbfRubN1c",
-    authDomain: "trans-lab-a8a00.firebaseapp.com",
-    databaseURL: "https://trans-lab-a8a00.firebaseio.com",
-    projectId: "trans-lab-a8a00",
-    storageBucket: "",
-    messagingSenderId: "1087920020259"
-  };
-  firebase.initializeApp(config);
-</script>
+
+  <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAEQHZNdaH57Z1UXOomddbbxhxbfRubN1c",
+      authDomain: "trans-lab-a8a00.firebaseapp.com",
+      databaseURL: "https://trans-lab-a8a00.firebaseio.com",
+      projectId: "trans-lab-a8a00",
+      storageBucket: "trans-lab-a8a00.appspot.com",
+      messagingSenderId: "1087920020259"
+    };
+    firebase.initializeApp(config);
+  </script>
 <!-- vinculo jquery -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
