se creo coleccion tarjeta

--- a/index.html
+++ b/index.html
@@ -140,9 +140,10 @@
       <secction class="secciondemierda">
         <div class="row">
           <div class="col-sm-12">
-            <input type="text" class="inPer">
-            <input type="text" class="inPer">
-            <button type="button" class="btn btn-terciary" id="firstbCard">AGREGAR TARJETA</button>
+            <input type="text" class="inPer" id="agEmail">
+            <input type="text" class="inPer" id="agCard">
+            <div id="errorNumber"></div>
+            <button type="button" class="btn btn-terciary" onclick="numberCard()" id="firstbCard">AGREGAR TARJETA</button>
             <input type="text" class="inPer">
             <input type="text" class="inPer">
             <input type="text" class="inPer">
