muestra los codigos de las tarjetas

--- a/index.html
+++ b/index.html
@@ -140,14 +140,11 @@
       <secction class="secciondemierda">
         <div class="row">
           <div class="col-sm-12">
-            <input type="text" class="inPer" id="agEmail">
+            <div class="inPer" id="agEmail"></div>
             <input type="text" class="inPer" id="agCard">
             <div id="errorNumber"></div>
             <button type="button" class="btn btn-terciary" onclick="numberCard()" id="firstbCard">AGREGAR TARJETA</button>
-            <input type="text" class="inPer">
-            <input type="text" class="inPer">
-            <input type="text" class="inPer">
-            <input type="text" class="inPer">
+            <div class="inPer" id="cardSee"></div>            
 
           </div>
         </div>
