muestra saldo tarjeta bip

--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
       </select>
     </div>
     <button type="button" class="botonVerSaldo" id="botonVer">VER SALDO</button>
+    <div id="agSaldo"></div>
   </div>
   </section>
   <!-- fin seccion ver saldo -->
