--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </section>
   <!-- fin de seccion login -->
 
-  <!-- seccion menú -->
+  <!-- seccion menú home -->
   <secction id="seccionMenu">
     <!-- comienzo container -->
     <div class="container-fluid">
@@ -78,7 +78,7 @@
                 <ul class="nav flex-column">
                   <li class="nav-item">
                     <a class="nav-link" href="#">
-                      <i class="fas fa-dollar-sign"></i> Ver saldo</a>
+                      <i class="fas fa-dollar-sign" id="iconPeso"></i> Ver saldo</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">
@@ -94,7 +94,7 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">
-                      <i class="fas fa-arrow-right"></i> Home</a>
+                      <i class="fas fa-arrow-right" id="iconHome"></i> Home</a>
                   </li>
                 </ul>
               </div>
@@ -116,14 +116,14 @@
         <div class="row">
           <div class="col-sm-12"></div>
           <button type="button" class="btn btn-primary" id="firstbSaldo">VER SALDO</button>
-          <button type="button" class="btn btn-primary" id="secondb">CALCULAR TARIFA</button>
+          <button type="button" class="btn btn-primary" id="secondbTarifa">CALCULAR TARIFA</button>
           <button type="button" class="btn btn-primary" id="threebPerfil">PERFIL</button>
           <button type="button" class="btn btn-primary" id="fourb">PREGUNTAS FRECUENTES</button>
         </div>
       </div>
   </secction>
   </seccion>
-  <!-- fin seccion menú -->
+  <!-- fin seccion menú home-->
 
   <!-- seccion perfil -->
   <section id="seccionPerfil">
@@ -158,12 +158,11 @@
     <div>
   <input type="text" class="form-control" id="inputTarjeta" placeholder="Numero tarjeta" value="">
   <div class="input-group mb-3">      
-      <select class="custom-select" id="inputGroupSelect01">
-        <option selected>Choose your option</option>
-        <option value="1">One</option>
-        <option value="2">Two</option>
-        <option value="3">Three</option>
-      </select>
+    <select class="form-control" id="listaTarjetas">
+      <option id="optionTarjetas">
+        chose your option
+      </option>
+    </select>
     </div>
     <button type="button" class="botonVerSaldo" id="botonVer">VER SALDO</button>
     <div id="agSaldo"></div>
@@ -171,6 +170,34 @@
   </section>
   <!-- fin seccion ver saldo -->
 
+  <!-- seccion calcular tarifa -->
+  <secction id="seccionTarifa">
+    <div class="tarifa">
+      <input type="text" class="inPer">
+    </div>
+    <div class="seconTarifa">
+      <div class="input-group mb-3">      
+        <select class="form-control" id="listaTarifa">
+          <option id="optionTarjetas">
+            chose your option
+          </option>
+        </select>
+      </div>
+      <div class="input-group mb-3">      
+        <select class="form-control" id="listaTarjeta">
+          <option id="optionTarjetas">
+            chose your option
+          </option>
+        </select>
+      </div>
+    </div>
+    <div class="btnCalTarifa">
+      <button type="button" class="botonVerSaldo" id="botonTaf">VER SALDO</button>
+    </div>
+    <div id"verTrifa"></div>
+    <div id="verSalDes"></div>
+  </secction>
+  <!-- fin seccion calcular calcular -->
 
   <!-- vinculo firebase -->  
 <script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
