--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
   </section>
   <!-- fin de seccion login -->
 
+  <!-- seccion registrate -->
+  <section id="registerSec">  
+  <div id="loggedOut">
+    <input id="email" type="email">
+    <input id="password" type="password">
+    
+    <input id="register" onclick="register()" type="button" value="REGISTER">
+    <input id="login" onclick="login()" type="button" value="LOGIN">
+    <input id="loginFacebook" type="button" onclick="loginFacebook()" value="LOGIN FACEBOOK">
+</div>
+</section>
+  <!-- fin seccion registrate -->
+
   <!-- seccion menú home -->
   <secction id="seccionMenu">
     <!-- comienzo container -->
