se arreglan botones

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   <!-- seccion calcular tarifa -->
   <secction id="seccionTarifa">
     <div class="tarifa">
-      <input type="text" class="inPero" placeholder="Numero de tarjeta">
+      <input type="text" class="inPer" placeholder="Numero de tarjeta">
     </div>
     <div class="seconTarifa">
       <div class="input-group mb-4">      
