cambios en pantalla

--- a/index.html
+++ b/index.html
@@ -162,9 +162,8 @@
             <input type="text" class="inPer" id="agCard" placeholder="Numero de tarjeta">
             <div id="errorNumber"></div>
             <button type="button" class="btn btn-terciary" onclick="numberCard()" id="firstbCard">AGREGAR TARJETA</button>
-            <div class="inEmailSaldo" id="cardSee"></div>            
-
-          </div>
+            <div class="inEmailSaldo" id="cardSee"></div>
+           </div>
         </div>
       </secction>
     </section>
@@ -212,7 +211,7 @@
     <div class="btnCalTarifa">
       <button type="button" class="botonVerSaldo" id="botonTaf">CALCULAR</button>
     </div>
-    <div id"verTrifa"></div>
+    <div id="verTarifa"></div>
     <div id="verSalDes"></div>
   </secction>
   <!-- fin seccion calcular tarifa -->
