intento cambios en html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <section id="sectionLogin">
+  <section id="sectionLogin" class="sectionLog">
     <header>
       <!-- comienzo de container -->
       <div class="container-fluid">
