--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <div class="btnCalTarifa">
       <button type="button" class="botonVerSaldo" id="botonTaf">CALCULAR</button>
     </div>
-    <div id="verTarifa"></div>
+    <div id="verTarifa" class="divSaldo"></div>
     <div id="verSalDes"></div>
   </secction>
   <!-- fin seccion calcular tarifa -->
