intentos de cambios

--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
             <nav class="navbar navbar-dark bg-dark">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                 aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>                
               </button>
+              <p class="navMenu">TRANS-LAB</p>
             </nav>
           </div>
         </div>
@@ -209,7 +210,8 @@
       </div>
     </div>
     <div class="btnCalTarifa">
-      <button type="button" class="botonVerSaldo" id="botonTaf">CALCULAR</button>
+      <button type="button" class="botonVerSaldo" id="botonTaf">TARIFA</button>
+      <button type="button" class="botonVerSaldo" id="botonTari" onclick="calulationSal()">CALCULAR</button>
     </div>
     <div id="verTarifa" class="divSaldo"></div>
     <div id="verSalDes"></div>
