cambios en html

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
     <seccion id="botonesMenu">
       <!-- segundo container botones -->
       <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-12"></div>
-          <button type="button" class="btn btn-primary" id="firstbSaldo">VER SALDO</button>
-          <button type="button" class="btn btn-primary" id="secondbTarifa">CALCULAR TARIFA</button>
-          <button type="button" class="btn btn-primary" id="threebPerfil">PERFIL</button>
-          <button type="button" class="btn btn-primary" id="fourb">PREGUNTAS FRECUENTES</button>
+        <div class="row" class="botonesylactm">
+          <div class="col-sm 6"></div>
+          <button type="button" class="btn btn-primary" id="firstbSaldo"><p class="parrFuBt">VER SALDO</p></button>
+          <button type="button" class="btn btn-primary" id="secondbTarifa"><p class="parrFuBt">CALCULAR TARIFA</p></button>
+          <button type="button" class="btn btn-primary" id="threebPerfil"><p class="parrFuBt">PERFIL</p></button>
+          <button type="button" class="btn btn-primary" id="fourb"><p class="parrFuBt">PREGUNTAS FRECUENTES</p></button>
         </div>
       </div>
   </secction>
@@ -219,7 +219,7 @@
       <button type="button" class="botonVerSaldo" id="botonTari" onclick="calculationTaf()">CALCULAR</button>
     </div>
     <div id="verTarifa" class="divSaldo"></div>
-    <div id="verSalDes"></div>
+    <div id="verSalDes" class="divSaldo"></div>
   </secction>
   <!-- fin seccion calcular tarifa -->
 
