--- a/index.html
+++ b/index.html
@@ -237,21 +237,21 @@
     
     <nav>
         <div class="container-fluid questionM">           
-            <p>En esta seccion puedes encontrar las respuestas a tus preguntas sobre la tarjeta Bip.</p>
+            <p class="reseña">En esta seccion puedes encontrar las respuestas a tus preguntas sobre la tarjeta Bip.</p>
             <button type="button" class="btn btn-primary questPregun" data-toggle="collapse" data-target="#demo">¿Dónde puedo cambiar mi tarjeta bip! portador en caso de falla?</button>
             <div id="demo" class="collapse">
                 Si tu tarjeta no funciona y tiene daños no atribuibles al usuario, llévala a una Oficina de Servicio al Cliente donde será cambiada por una nueva, sólo si se comprueba la falla. Si la tarjeta dañada tiene saldo, será traspasado en cinco días hábiles.
             </div>
           </div>
           <div class="container-fluid questionM">               
-              <button type="button" class="btn btn-primary questPregun" data-toggle="collapse" data-target="#demo">¿Cómo reviso la historia de los movimientos de mi tarjeta bip!?</button>
-              <div id="demo" class="collapse">
+              <button type="button" class="btn btn-primary questPregun" data-toggle="collapse" data-target="#demo1">¿Cómo reviso la historia de los movimientos de mi tarjeta bip!?</button>
+              <div id="demo1" class="collapse">
                   Revisa las transacciones de tu tarjeta de los últimos 90 días ingresando a la sección “bip! en línea!” 
               </div>
             </div>
             <div class="container-fluid questionM">               
-                <button type="button" class="btn btn-primary questPregun" data-toggle="collapse" data-target="#demo">¿Dónde puedo dar mi opinión o sugerencia acerca de la tarjeta bip!?</button>
-                <div id="demo" class="collapse">
+                <button type="button" class="btn btn-primary questPregun" data-toggle="collapse" data-target="#demo2">¿Dónde puedo dar mi opinión o sugerencia acerca de la tarjeta bip!?</button>
+                <div id="demo2" class="collapse">
                     Tienes dos maneras. La primera es hacerlo por nuestro call center llamando al 800 730 00 73 y marcando la opción 2.
                 </div>
               </div>      
