--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   </ul>
                 </div>
               </div>
-              <nav class="navbar navbar-dark bg-dark">
+              <nav class="navbar navbar-dark bg-dark" id="navWhite">
                 <button class="navbar-toggler" type="button" data-toggle="collapse"data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
                   aria-expanded="false" aria-label="Toggle navigation" onclick="toggleMenu()">
                   <span class="navbar-toggler-icon"></span>                
@@ -165,7 +165,7 @@
             <div class="inEmailSaldo" id="agEmail"></div>
             <input type="text" class="inPer" id="agCard" placeholder="Numero de tarjeta">
             <div id="errorNumber"></div>
-            <button type="button" class="btn btn-terciary" onclick="numberCard()" id="firstbCard">AGREGAR TARJETA</button>
+            <button type="button" class="botonVerSaldo" onclick="numberCard()" id="firstbCard">AGREGAR TARJETA</button>
             <div class="inEmailSaldo" id="cardSee"></div>
           </div>
         </div>
