--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <section id="sectionLogin" class="sectionLog">
     <header>
       <!-- comienzo de container -->
-      <div class="container-fluid">
+      <div class="container-fluid cabecera">
         <div class="row">
           <!-- inicio de columnas -->
           <div class="col-sm-12">
@@ -82,7 +82,7 @@
 
   <!-- seccion menú home -->
   <secction id="seccionMenu">
-  <div class="container-fluid">  
+  <div class="container-fluid menuHome">  
       <!-- comienzo container -->
       
         <!-- comienzo row -->
@@ -159,7 +159,7 @@
       </header>
     </section>
     <section>
-      <secction class="secciondemierda">
+      <secction class="secciondem">
         <div class="row">
           <div class="col-sm-12">
             <div class="inEmailSaldo" id="agEmail"></div>
@@ -230,36 +230,43 @@
 
   <!-- seccion preguntas frecuentes -->
 
-  <div class="container-fluid questions" id="sectionQuest">
-    <section class="preguntas">
-      <div>
+ 
+    <section id="sectionQuest">
+      <div class="preguntas" >
         <p>Preguntas frecuentes</p>
       </div>
-    </section>
-
-    <nav>
-      <div class="container-fluid questionM">
-        <p class="reseña">En esta seccion puedes encontrar las respuestas a tus preguntas sobre la tarjeta Bip.</p>
-        <button type="button" class="btn btn-primary questPregun" data-toggle="collapse" data-target="#demo">¿Dónde puedo cambiar mi tarjeta bip! portador en caso de falla?</button>
-        <div id="demo" class="collapse">
-          Si tu tarjeta no funciona y tiene daños no atribuibles al usuario, llévala a una Oficina de Servicio al Cliente donde será
-          cambiada por una nueva, sólo si se comprueba la falla. Si la tarjeta dañada tiene saldo, será traspasado en cinco
-          días hábiles.
+      <div id="accordion" role="tablist">
+      <div class="card">
+        <div class="card-header" role="tab" id="headingOne">
+          <h5 class="mb-0">
+            <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              ¿Dónde puedo cambiar mi tarjeta bip! portador en caso de falla?
+            </a>
+          </h5>
+        </div>
+    
+        <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+          <div class="card-body">
+            Si tu tarjeta no funciona y tiene daños no atribuibles al usuario, llévala a una Oficina de Servicio al Cliente donde será cambiada por una nueva, sólo si se comprueba la falla. Si la tarjeta dañada tiene saldo, será traspasado en cinco días hábiles.
+          </div>
         </div>
       </div>
-      <div class="container-fluid questionM">
-        <button type="button" class="btn btn-primary questPregun" data-toggle="collapse" data-target="#demo1">¿Cómo reviso la historia de los movimientos de mi tarjeta bip!?</button>
-        <div id="demo1" class="collapse">
-          Revisa las transacciones de tu tarjeta de los últimos 90 días ingresando a la sección “bip! en línea!”
+      <div class="card">
+        <div class="card-header" role="tab" id="headingTwo">
+          <h5 class="mb-0">
+            <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              ¿Cómo reviso la historia de los movimientos de mi tarjeta bip!?
+            </a>
+          </h5>
+        </div>
+        <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
+          <div class="card-body">
+            Revisa las transacciones de tu tarjeta de los últimos 90 días ingresando a la sección “bip! en línea!”
+          </div>
         </div>
       </div>
-      <div class="container-fluid questionM">
-        <button type="button" class="btn btn-primary questPregun" data-toggle="collapse" data-target="#demo2">¿Dónde puedo dar mi opinión o sugerencia acerca de la tarjeta bip!?</button>
-        <div id="demo2" class="collapse">
-          Tienes dos maneras. La primera es hacerlo por nuestro call center llamando al 800 730 00 73 y marcando la opción 2.
-        </div>
-      </div>
-  </div>
+    </div>
+  </section>
   <!-- fin seccion preguntas frecuentes -->
 
   <!-- vinculo firebase -->
