--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               </div>
               <nav class="navbar navbar-dark bg-dark" id="navWhite">
                 <button class="navbar-toggler" type="button" data-toggle="collapse"data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent"
-                  aria-expanded="false" aria-label="Toggle navigation" onclick="toggleMenu()">
+                  aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>                
                 </button>
                 <p class="navMenu">TRANS-LAB</p>
@@ -185,7 +185,7 @@
           </option>
         </select>
       </div>
-      <button type="button" class="botonVerSaldo" id="botonVer">VER SALDO</button>
+      <button type="button" class="botonVerSaldo" id="botonVer" onclick="cashCardAp()">VER SALDO</button>
       <div class="divSaldo" id="agSaldo"></div>
     </div>
   </section>
@@ -294,6 +294,7 @@
   <!-- viculo hojas js -->
   <script src="src/js/main.js"></script>
   <script src="src/js/data.js"></script>
+  <script src="src/js/modelo.js" ></script>
 </body>
 
 </html>
