--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <!-- fin de seccion login -->
 
   <!-- seccion registrate -->  
-    <section class="inputLogin" id="registerSec">
+    <section class="sectionLogin" id="registerSec">
     <form>
       <div class="form-group">
         <label for="exampleInputEmail1"></label>
@@ -209,7 +209,8 @@
           <option id="optionTarjetas">
             Seleccione una tarjeta
           </option>
-        </select>     
+        </select>
+      
     </div>
     <div class="btnCalTarifa">
       <button type="button" class="botonVerSaldo" id="botonTari" onclick="calculationTaf()">CALCULAR</button>
